Followup to reviews NS-151, and NS-152.